Initial solution by raipc